kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ofw
  labels:
    name: ofw
    environment: production
